# exogram

./: .cursorrules  .env.example  .gitignore  README.md  demo_ruoyi.py  pyproject.toml  requirements.txt
.cursor/: ARCHITECTURE.md  STATE.md
src/exogram/: cli.py  config.py  models.py  models_rich.py  utils.py
src/exogram/distillation/: __init__.py  distiller.py  semantic_distiller.py
src/exogram/execution/: __init__.py  auth.py  context.py  executor.py  session.py
src/exogram/memory/: __init__.py  jsonl_store.py
src/exogram/recording/: __init__.py  live_recorder.py  workflow_use_adapter.py
tests/: __init__.py  conftest.py  test_auth.py  test_memory.py  test_models.py  test_models_rich.py  test_utils.py
